--- a/src/styles.css
+++ b/src/styles.css
@@ -54,8 +54,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 header {
-  background-color: black;
-  color: white;
+  background-color: #8B2C2C;
+  color: #F5E3C3;
   padding: 1rem;
   position: fixed;
   top: 0;
@@ -83,14 +83,14 @@ li {
 header button {
   background-color: transparent;
   border: none;
-  color: white;
+  color: #F5E3C3;
   font-size: 1.5rem;
   cursor: pointer;
   padding: 0.5rem 1rem;
 }
 
 header button:hover {
-  background-color: rgba(255, 255, 255, 0.1);
+  background-color: #4B5320;
 }
 
 #logo {
@@ -98,9 +98,49 @@ header button:hover {
   font-weight: bold;
 }
 
-body {
-  margin-top: 4rem;
+/*Main page styles*/
+
+#content::before {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.3); /* dark overlay */
+  z-index: 1;
+}
+
+#content {
+  position: fixed; 
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 0; 
+  
+  background: 
+    linear-gradient(to right, #FAF3E0 0%, rgba(250,243,224,0) 99%),
+    url('./assets/pizzaInitial.jpg') no-repeat center center;
+  background-size: cover;
+}
+
+.text-container,
+.social-media-container {
+  position: relative; 
+  z-index: 5;
+
+  margin-top: 5rem;
   padding: 2rem;
-  background-color: #f0f0f0;
-  color: #333;
+  color: #4B2E2E;
+}
+
+.text-container h1 {
+  font-size: 4rem;
+}
+
+.text-container p {
+  font-size: 1.5rem;
+  line-height: 1.5;
+  width: 60rem;
 }
