--- a/src/styles.css
+++ b/src/styles.css
@@ -100,6 +100,22 @@ header button:hover {
 
 /*Main page styles*/
 
+@font-face {
+  font-family: "Cinzel";
+  src: url("./assets/Cinzel/Cinzel-Regular.woff") format("woff"),
+      url("./assets/Cinzel/Cinzel-Regular.woff2") format("woff2");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Cormorant-Garamond";
+  src: url("./assets/Cormorant_Garamond/CormorantGaramond-Light.woff") format("woff"),
+      url("./assets/Cormorant_Garamond/CormorantGaramond-Light.woff2") format("woff2");
+  font-weight: normal;
+  font-style: normal;
+} 
+
 #content::before {
   content: "";
   position: fixed;
@@ -107,7 +123,7 @@ header button:hover {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.3); /* dark overlay */
+  background: rgba(0, 0, 0, 0.3);
   z-index: 1;
 }
 
@@ -137,10 +153,18 @@ header button:hover {
 
 .text-container h1 {
   font-size: 4rem;
+  font-family: "Cinzel", serif;
+  font-weight: 700;
 }
 
 .text-container p {
   font-size: 1.5rem;
   line-height: 1.5;
   width: 60rem;
+  font-family: "Cormorant-Garamond", serif;
+  font-weight: 600;
+}
+
+.social-media-container {
+  font-family: sans-serif;
 }
