--- a/src/styles.css
+++ b/src/styles.css
@@ -94,10 +94,9 @@ header button:hover {
 }
 
 #logo img {
-  height: 4rem;
+  height: 4.5rem;
   aspect-ratio: 1/1;
   object-fit: cover;
-
 }
 
 /*Main page styles*/
@@ -179,7 +178,7 @@ header button:hover {
   margin-top: 2rem;
 }
 
-/* menu-page styles */
+/*Menu page styles*/
 #menu-page {
   margin-top: 5rem;
   padding: 2rem;
@@ -251,4 +250,20 @@ header button:hover {
   border-radius: 8px;
   background-color: #c59d5f;
   cursor: pointer;
+}
+
+/*About page styles*/
+
+#about-page {
+  position: fixed; 
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 0; 
+  margin-top: 5rem;
+  padding: 2rem;
+  
+  background-color: #FAF3E0;
+  background-size: cover;
 }
