--- a/src/styles.css
+++ b/src/styles.css
@@ -147,9 +147,12 @@ header button:hover {
   position: relative; 
   z-index: 5;
 
-  margin-top: 5rem;
   padding: 2rem;
   color: #4B2E2E;
+}
+
+.text-container {
+  margin-top: 5rem;
 }
 
 .text-container h1 {
