--- a/src/styles.css
+++ b/src/styles.css
@@ -129,11 +129,12 @@ header button:hover {
 }
 
 #content {
-  position: fixed; 
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  gap: 2rem;
   z-index: 0; 
   
   background: 
@@ -258,14 +259,13 @@ header button:hover {
 /*About page styles*/
 
 #about-page {
-  position: fixed; 
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 0; 
-  margin-top: 5rem;
   padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  z-index: 0;
   
   background-color: #FAF3E0;
   background-size: cover;
